# label-sheet-generator

./: .gitignore  AGENTS.md  DESIGN.md  README.md  pyproject.toml
examples/: basic_records.json  minimal_farmhouse_spice_records.json
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
src/label_sheet_generator/: __main__.py  avery.py  cli.py  io.py  models.py  presets.py  rendering.py  streamlit_app.py  template_import.py  units.py  web_api.py  web_launcher.py  workspace.py
stitch_downloads/: code.html
templates/: basic_template.json  basic_template_inch.json  imported_template.json  imported_template1.json  imported_template2.json
templates/labels/: minimal_farmhouse_spice_jar_1p35x1p9.json
templates/layouts/: basic_address_layout.json  minimal_farmhouse_spice_jar_layout.json
tests/: test_avery.py  test_cli.py  test_io.py  test_models.py  test_rendering.py  test_template_import.py  test_web_api.py  test_workspace.py
